--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,3 +24,14 @@
   padding-left: 40px;
   font-style: italic;
 }
+
+.yt-div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+iframe{
+  border: 0;
+}
