I can do drafts and shit!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="info-container">
             <p>
                 I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a>, I'm the co-founder and tech lead of the small
-                danish consulting firm bambuu, that primarily works with React, React Native and Node.
+                danish consulting firm <a href='https://www.bambuu.dk'>bambuu</a>, that primarily works with React, React Native and Node.
                 I enjoy geocaching, swing dancing and cocktails with ungodly amounts of sugar in them.
             </p>
             <a href="{{site.url}}">Back to the front page?</a>
