--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,16 @@
   margin-left: auto;
 }
 
+.imgdiv {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+}
+
+.full-width {
+  width: 100%;
+}
+
 .img-circle{
   border-radius: 50%;
 }
