--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ site.title }}</title>
@@ -18,6 +19,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.2.1/cookiebanner.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111460485-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
