--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,8 +25,9 @@
     margin-right: auto;
     margin-left: auto;
     display: block;
+    max-height: 300px;
   }
-
+  max-height: 300px;
   margin-bottom: 30px;
 }
 
@@ -62,6 +63,10 @@ iframe {
 code {
   margin: 0 2px;
   padding: 0;
+}
+
+.wrapper, section {
+  max-width: 950px !important; // Override theme styling
 }
 
 // Mailchimp signup formule default styling
