updates to jstots2

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <img class="img-circle" src="{{site.url}}/assets/img/me.png" alt="Profile picture of me">
         <div class="info-container">
             <p>
-                I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a>, I'm the co-founder and tech lead of the small
+                I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm the co-founder and tech lead of the small
                 danish consulting firm <a href='https://www.bambuu.dk'>bambuu</a>, that primarily works with React, React Native and Node.
                 I enjoy geocaching, swing dancing and cocktails with ungodly amounts of sugar in them.
             </p>
