--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{site.theme}}";
 
+p {
+  font-size: 16px !important;
+}
+
 .layout-post {
   margin-bottom: 50px;
 }
@@ -39,6 +43,14 @@
   }
 }
 
+.img-div-skyscraper {
+  @extend .img-div;
+  max-height: 800px;
+  img {
+    max-height: 800px;
+  }
+}
+
 .full-width {
   width: 100%;
 }
@@ -71,6 +83,7 @@ iframe {
 code {
   margin: 0 2px;
   padding: 0;
+  font-size: 16px !important;
 }
 
 .wrapper, section {
