--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,12 @@ p {
   margin-left: auto;
 }
 
+.code-caption {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
 .img {
   margin-right: auto;
   margin-left: auto;
