--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,7 @@
         <div class="info-container">
             <p>
                 I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm the co-founder and tech lead of the small
-                danish consulting firm <a href='https://www.bambuu.dk'>bambuu</a>, that primarily works with React, React Native and Node.
-                I enjoy geocaching, swing dancing and cocktails with ungodly amounts of sugar in them.
+                danish waste-management company <a href='https://www.reccoon.dk/'>Reccoon</a>, that primarily works with React, React Native and Django.
             </p>
             <a href="{{site.url}}">Back to the front page?</a>
         </div>
