removed image and trimmed padding

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@ p {
   font-size: 16px !important;
 }
 
+section {
+  padding-bottom: 20px !important; // Theme padding is a little too aggressive for me.
+}
+
 .layout-post {
   margin-bottom: 50px;
 }
