--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
                 I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm the co-founder and tech lead of the small
                 danish waste-management company <a href='https://www.reccoon.dk/'>Reccoon</a>, that primarily works with React, React Native and Django.
             </p>
+            <p>
+                See an error? Submit a <a href="https://github.com/GeeWee/geewee.github.io">Pull Request</a> and help fix it!
+            </p>
             <a href="{{site.url}}">Back to the front page?</a>
         </div>
     </div>
