death spirals draft 2

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,9 @@
         <img class="img-circle" src="{{site.url}}/assets/img/me.png" alt="Profile picture of me">
         <div class="info-container">
             <p>
-                I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm the co-founder and tech lead of the small
-                danish waste-management company <a href='https://www.reccoon.dk/'>Reccoon</a>, that primarily works with React, React Native and Django.
+                I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm currently a software Developer at
+                <a href="https://www.scadaminds.com/">SCADA MINDS</a>, where we handle all sorts of software development related to wind-turbines and renewable energy.
+                I currently work mostly with C#, but I've worked extensively with Node, React, React Native, Typescript and Django.
             </p>
             <p>
                 See an error? Submit a <a href="https://github.com/GeeWee/geewee.github.io">Pull Request</a> and help fix it!
