Pull request with right path!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                 I currently work mostly with C#, but I've worked extensively with Node, React, React Native, Typescript and Django.
             </p>
             <p>
-                See an error? Submit a <a href="https://github.com/GeeWee/geewee.github.io">Pull Request</a> and help fix it!
+                See an error? Submit a <a href="https://github.com/GeeWee/geewee.github.io/tree/master/{{page.path}}">Pull Request</a> and help fix it!
             </p>
             <a href="{{site.url}}">Back to the front page?</a>
         </div>
