--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,10 @@ li {
   font-size: 16px !important;
 }
 
+h3 {
+  color: #e8e8e8 !important;
+}
+
 h4 {
   font-size: 17px !important; // Same size as p, but different color. Theme size is too small
 }
