--- a/_includes/post_content.html
+++ b/_includes/post_content.html
@@ -1,16 +1,3 @@
-<article class="unit-article layout-post">
-    <div class="unit-inner unit-article-inner">
-        <div class="content">
-            <div class="bd">
-                <div class="entry-content">
-                    <h2 class="centered" ><a href="{{post.url}}">{{post.title}}</a></h2>
-                    {% if post.short.size %}
-                        {{post.short}}
-                    {% else %}
-                        {{post.excerpt}}
-                    {% endif %}
-                </div><!-- entry-content -->
-            </div><!-- bd -->
-        </div><!-- content -->
-    </div><!-- unit-inner -->
-</article>
+{{ content }}
+<i>Did you enjoy this post? Please share it!</i>
+{% include twitter_button.html %}
