--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
             <hr>
         </div>
         <h1>{{page.title}}</h1>
-        {{ content }}
+        {% include post_content.html %}
     </section>
     {% include footer.html %}
 </div>
