second draft of death spirals!

--- a/_includes/post_content.html
+++ b/_includes/post_content.html
@@ -1,3 +1,3 @@
 {{ content }}
-<i>Did you enjoy this post? Please share it!</i>
+<em>Did you enjoy this post? Please share it!</em>
 {% include twitter_button.html %}
