updated typo and twitter button

--- a/_includes/twitter_button.html
+++ b/_includes/twitter_button.html
@@ -29,7 +29,7 @@
         cursor: pointer;
     }
 
-    .twitter-button i {
+    .twitter-button em {
         position: relative;
         top: 2px;
         bottom: 2px;
