added canonical url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <meta charset="utf-8">
+    <link rel="canonical" href="{{ page.url | absolute_url }}" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ site.title }} - {{page.title}}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
