--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,9 @@
     <script type="text/javascript" id="cookiebanner"
             src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.2.1/cookiebanner.min.js"></script>
 
+    <!-- RSS feed -->
+    {% feed_meta %}
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111460485-1"></script>
     <script>
