--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,6 +19,9 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
+    <!-- RSS feed -->
+    {% feed_meta %}
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111460485-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
