--- a/_includes/post_content.html
+++ b/_includes/post_content.html
@@ -1,3 +1,3 @@
 {{ content }}
 <em>Did you enjoy this post? Please share it!</em>
-{% include twitter_button.html %}
+{% include twitter_share_button.html %}
