--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,11 +35,14 @@
 <body>
 
 <div class="wrapper">
-
     <section>
         <div id="title">
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
-            <p>{{ site.description | default: site.github.project_tagline }}</p>
+            <h1>{{ site.title | default: site.github.repository_name }} </h1>
+            <p>{{ site.description | default: site.github.project_tagline }}
+            {% include rss_icon.html %}
+            {% include twitter_author_button.html %}
+            </p>
+
             <hr>
         </div>
 
