--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -329,3 +329,14 @@ code {
   max-height: 1.5rem;
   vertical-align: middle;
 }
+
+
+// Footnotes
+.footnote-superscript {
+  cursor: pointer;
+  color: #ffcc00;
+}
+
+.littlefoot-footnote {
+  color: black;
+}
