--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
 
+    <!-- Littlefoot (footnotes as tooltip) stylesheet -->
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/littlefoot/dist/littlefoot.css"
+    />
+
+
     <script type="text/javascript" id="cookiebanner"
             src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.2.1/cookiebanner.min.js"></script>
 
@@ -29,5 +36,6 @@
 
       gtag('config', 'UA-111460485-1');
     </script>
+     
 
 </head>
