--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <div class="wrapper">
     <section>
         <div id="title">
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
+            <h1><a href="{{site.url}}">{{ site.title | default: site.github.repository_name }}</a></h1>
             <p>{{ site.description | default: site.github.project_tagline }}
             {% include rss_icon.html %}
             {% include twitter_author_button.html %}
