--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-{% include head.html %}
+<head>
+    {% include default-head.html %}
+</head>
 <body>
 
 <div class="wrapper">
