--- a/_includes/default-head.html
+++ b/_includes/default-head.html
@@ -38,15 +38,7 @@
 
 
 
-<!-- (Cookieless) Google Analytics -->
-<script>
-    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'UA-111460485-1',
-        {
-        'storage': 'none'
-    });
-
-    ga('send', 'pageview');
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-<!-- End Google Analytics -->
+<!-- GoatCounter! -->
+<script data-goatcounter="https://gustavwengel.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+<!-- End GoatCounter -->
