--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,12 @@ buttonTemplate: `
 <!-- ACCORDION SCRIPT-->
 <!--TODO change-->
 <script>
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-
-    for (i = 0; i < acc.length; i++) {
+    const acc = document.getElementsByClassName("accordion");
+    for (let i = 0; i < acc.length; i++) {
         acc[i].addEventListener("click", function() {
             this.classList.toggle("active");
             //todo this doesn't work as both things are wrapped in a <p> tag.
-            var panel = this.nextElementSibling;
+            const panel = this.nextElementSibling;
             if (panel.style.maxHeight) {
                 panel.style.maxHeight = null;
             } else {
