--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
         <div class="info-container">
             <p>
                 I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm currently a software Developer at
-                <a href="https://www.scadaminds.com/">SCADA MINDS</a>, where we handle all sorts of software development related to wind-turbines and renewable energy.
-                I currently work mostly with C#, but I've worked extensively with Node, React, React Native, Typescript and Django.
+                <a href="https://climatiq.io/" target="_blank">Climatiq</a>, where we provide an API for all sorts of carbon emission accounting.
+                I currently work mostly with Rust, but I've worked extensively with C#, Node, React, React Native, Typescript and Django.
             </p>
             <p>
                 See an error? Submit a <a href="https://github.com/GeeWee/geewee.github.io/tree/master/{{page.path}}">Pull Request</a> and help fix it!
