added a cool blog post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <img class="img-circle" src="{{site.url}}/assets/img/me.png" alt="Profile picture of me">
         <div class="info-container">
             <p>
-                I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://twitter.com/GeeWengel'>twitter</a>), I'm currently a software Developer at
+                I'm <a href="mailto:gustavwengel@gmail.com">Gustav</a> (<a href='https://fosstodon.org/@geewee'>Mastodon</a>), I'm currently a Software Developer at
                 <a href="https://climatiq.io/" target="_blank">Climatiq</a>, where we provide an API for all sorts of carbon emission accounting.
                 I currently work mostly with Rust, but I've worked extensively with C#, Node, React, React Native, Typescript and Django.
             </p>
