--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
             <h1><a href="{{site.url}}">{{ site.title | default: site.github.repository_name }}</a></h1>
             <p>{{ site.description | default: site.github.project_tagline }}
             {% include rss_icon.html %}
-            {% include twitter_author_button.html %}
+            {% include mastodon_author_button.html %}
             </p>
             <hr>
         </div>
