--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,7 @@
             <h1>{{ site.title | default: site.github.repository_name }} </h1>
             <p>{{ site.description | default: site.github.project_tagline }}
             {% include rss_icon.html %}
-            {% include twitter_author_button.html %}
+            {% include mastodon_author_button.html %}
             </p>
 
             <hr>
